tests/ui/missing-fmt.stderr
error: missing #[display("...")] display attribute
 --> tests/ui/missing-fmt.rs:7:5
  |
7 |     B(usize),
  |     ^^^^^^^^
